--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,9 +84,13 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
+
+    /* added to function ".benefits" to ignore redundant code in -lead, -brand, and -cost */
+    margin-bottom: 32px;
+    color: #ffffff;
 }
 
-.benefit-lead {
+/* .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -99,7 +103,7 @@ p {
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
-}
+} */
 
 .benefit-lead h3 {
     margin-bottom: 10px;
