--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,11 @@ p {
     background-color: #2589bd;
 
     /* added to function ".benefits" to ignore redundant code in -lead, -brand, and -cost */
+
+}
+
+/* added to function ".benefits" to ignore redundant code in -lead, -brand, and -cost */
+.benefit-brand, .benefit-cost, .benefit-lead{
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -105,7 +110,14 @@ p {
     color: #ffffff;
 } */
 
-.benefit-lead h3 {
+
+/* added code to h3 headers under .benefits div to ignore redundant code in -lead, -brand, and -cost */
+.benefits h3{
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+/* .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -118,7 +130,7 @@ p {
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
-}
+} */
 
 .benefit-lead img {
     display: block;
