--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,15 @@ p {
     text-align: center;
 } */
 
-.benefit-lead img {
+
+/* added code to img elements under .benefits div to ignore redundant code in -lead, -brand, and -cost */
+.benefits img{
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
+
+/* .benefit-lead img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -148,7 +156,7 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
+} */
 
 .search-engine-optimization {
     margin-bottom: 20px;
