--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,9 +84,6 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-
-    /* added to function ".benefits" to ignore redundant code in -lead, -brand, and -cost */
-
 }
 
 /* added to function ".benefits" to ignore redundant code in -lead, -brand, and -cost */
@@ -199,7 +196,14 @@ p {
     color: #ffffff;
 } */
 
-.search-engine-optimization img {
+
+
+/* created function to ignore redundant code in .search-engine-optimization img, online-reputation-management img, and social-media-marketing img */
+.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img{
+    max-height: 200px;
+}
+
+/* .search-engine-optimization img {
     max-height: 200px;
 }
 
@@ -209,7 +213,7 @@ p {
 
 .social-media-marketing img {
     max-height: 200px;
-}
+} */
 
 .search-engine-optimization h2 {
     margin-bottom: 20px;
