--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,7 +215,15 @@ p {
     max-height: 200px;
 } */
 
-.search-engine-optimization h2 {
+
+
+/* created function to ignore redundant code in .search-engine-optimization h2, online-reputation-management h2, and social-media-marketing h2 */
+.search-engine-optimization h2, .search-engine-optimization h2, .social-media-marketing h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/* .search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -228,7 +236,7 @@ p {
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
-}
+} */
 
 .footer {
     padding: 30px;
