--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,7 @@ p {
     font-size: 16px;
 }
 
+/* main image display field */
 .hero {
     height: 800px;
     width: 100%;
@@ -93,20 +94,6 @@ p {
     color: #ffffff;
 }
 
-/* .benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-} */
 
 
 /* added code to h3 headers under .benefits div to ignore redundant code in -lead, -brand, and -cost */
@@ -115,20 +102,7 @@ p {
     text-align: center;
 }
 
-/* .benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-} */
 
 
 /* added code to img elements under .benefits div to ignore redundant code in -lead, -brand, and -cost */
@@ -137,28 +111,6 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
-/* .benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-} */
-
-
-
-
 
 /* created function to ignore redundant code in .search-engine-optimization, online-reputation-management, and social-media-marketing */
 .search-engine-optimization, .online-reputation-management, .social-media-marketing {
@@ -170,74 +122,16 @@ p {
     color: #ffffff;
 }
 
-/* .search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-} */
-
-
-
 /* created function to ignore redundant code in .search-engine-optimization img, online-reputation-management img, and social-media-marketing img */
 .search-engine-optimization img, .online-reputation-management img, .social-media-marketing img{
     max-height: 200px;
 }
-
-/* .search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-} */
-
-
 
 /* created function to ignore redundant code in .search-engine-optimization h2, online-reputation-management h2, and social-media-marketing h2 */
 .search-engine-optimization h2, .search-engine-optimization h2, .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
-/* .search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-} */
 
 .footer {
     padding: 30px;
